<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="helper"
            type="com.finalcoursework.helpers.StatisticsUtility" />
        <variable
            name="viewModel"
            type="com.finalcoursework.ui.viewModels.StatisticsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.StatisticsActivity">

        <ImageButton
            android:id="@+id/helperButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/help"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_help_outline_24" />


        <LinearLayout
            android:id="@+id/today"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/linearLayout3"
            app:layout_constraintTop_toBottomOf="@id/helperButton1">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/TodayAverageSpeed"
                    android:textAlignment="center"/>

                <TextView
                    android:id="@+id/todayAverageSpeedDisplay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/intiAverageSpeedValue"
                    android:textAlignment="center" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/TodayTime"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/todayTimeDisplay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/intiTimeValue"
                    android:textAlignment="center"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/todayDistance"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/todayDistanceDisplay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/intiDistanceValue"
                    android:textAlignment="center" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@id/today"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/helperButton1"
            app:layout_constraintBottom_toTopOf="@id/chartFL">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/OverallAverageSpeed"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/averageSpeedDisplay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/intiAverageSpeedValue"
                    android:textAlignment="center" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/TotalTime"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/timeDisplay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/intiTimeValue"
                    android:textAlignment="center" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/TotalDistance"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/distanceDisplay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/intiDistanceValue"
                    android:textAlignment="center" />
            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:id="@+id/chartFL"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">
            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/myChart"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </FrameLayout>

        <TextView
            android:id="@+id/result"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/today"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/helperButton1"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/welcome"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/guide1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:text="@string/statisticsGuide"
            android:textColor="@color/white"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@id/today"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/helperButton1"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>