<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="helper"
            type="com.finalcoursework.helpers.PreviewUtility" />
        <variable
            name="viewModel"
            type="com.finalcoursework.ui.viewModels.PreviewViewModel" />
        <variable
            name="recordAdapter"
            type="com.finalcoursework.adapter.RecordAdapter" />
        <variable
            name="position"
            type="int" />
        <variable
            name="imagePickerLauncher"
            type="androidx.activity.result.ActivityResultLauncher" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.PreviewActivity">

        <FrameLayout
            android:id="@+id/fl"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/startTracking"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinner">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="vertical" />
        </FrameLayout>

        <Button
            android:id="@+id/startTracking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/StartTracking"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/statistics" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:entries="@array/sortStyle"
            android:minHeight="32dp"
            app:layout_constraintBottom_toTopOf="@id/fl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/sortedBy"
            android:textSize="22sp"
            app:layout_constraintBottom_toTopOf="@+id/fl"
            app:layout_constraintEnd_toStartOf="@+id/spinner"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/statistics"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistics"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/startTracking"/>

        <ImageButton
            android:id="@+id/helperButton"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:contentDescription="@string/help"
            app:layout_constraintBottom_toTopOf="@+id/fl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_help_outline_24" />

        <TextView
            android:id="@+id/guide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/black"
            android:text="@string/guide"
            android:textColor="@color/white"
            android:visibility="invisible"
            app:layout_constraintEnd_toStartOf="@+id/spinner"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/fl"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>