<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="isBackground"
            type="Boolean" />
        <variable
            name="PermissionHandler"
            type="com.finalcoursework.helpers.PermissionUtility" />
        <variable
            name="rationaleDialog"
            type="androidx.appcompat.app.AlertDialog" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.PermissionCheckingActivity">

        <Button
            android:id="@+id/permissionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FinePermission"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/PermissionWarning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/permissionWarning"
            android:textSize="20sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/permissionButton" />

        <Button
            android:id="@+id/GoToSetting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GotoSetting"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/permissionButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>